[project]
name = "agent-fabric"
version = "0.1.0"
description = "Agent Fabric - Generate custom agents from natural language descriptions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.0.52",
    "pydantic-ai-slim[a2a]>=0.0.52",
    "fasta2a>=0.1.0",
    "gradio>=5.33.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.11.3",
]
